# nano_renderer

./: .gitignore  CMakeLists.txt  README.md  README.txt  class_model3_d.html  doxygen_crawl.html  geometry.h  globals_defs.html  main.cpp  math__core_8h_source.html  menudata.js  model.cpp  model.h  obj_reader.cpp  render.cpp  render.h  render_8h_source.html  simple_scanline.cpp  struct_matrix.html  structvec-members.html  templates.h
assets/: fixed_zbuffer.tga  persp_camera.tga  persp_first_try.tga
docs/: doxyfile
docs/html/: class_model3_d-members.html  class_renderer-members.html  class_renderer.html  class_zbuffer-members.html  functions_func.html  index.html  math__core_8h.js  navtreeindex0.js  struct_button.html  struct_camera-members.html  struct_camera.html  struct_matrix.js  structvec.js
docs/html/search/: all_3.js  all_4.js  all_a.js  all_b.js  classes_2.js  functions_0.js  functions_2.js  functions_6.js
docs/output/html/: annotated.html  annotated_dup.js  class_zbuffer.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_vars.html  globals.html  math__core_8h.html  model_8h_source.html  navtreedata.js  struct_button-members.html  struct_matrix-members.html  structvec.html
docs/output/html/search/: all_0.js  all_5.js  all_7.js  all_9.js  files_0.js  functions_3.js  searchdata.js  variables_0.js
docs/output/latex/: annotated.tex  class_model3_d.tex  class_renderer.tex  class_zbuffer.tex  files.tex  math__core_8h.tex  math__core_8h_source.tex  model_8h_source.tex  refman.tex  render_8h_source.tex  struct_button.tex  struct_camera.tex  struct_matrix.tex  structvec.tex
lib/: tgaimage.cpp  tgaimage.h
search/: classes_4.js
src/: main.cpp  math_core.h  model.cpp  model.h  render.cpp  render.h  templates.h  tests.cpp
